# future-infrastructure-atlas

./: .env.example  .gitignore  .vercelignore  AGENTS.md  LEARNINGS.md  MIGRATION_PLAN.md  Makefile  NEXT_STEPS.md  README.md  SECURITY_AUDIT.md  docker-compose.yml  pyproject.toml  render.yaml  run_migration.py  test_stripe.py
atlas/: __init__.py  db.py  logging_config.py  payments.py  provenance.py  registry.py  settings.py  storage.py  validation.py
backend/: Dockerfile  main.py  requirements.txt
config/: cable_geometries.json  cable_geometry_supplement.json  cable_schematic_geometries.json  commercial_api.yaml  datacenter_locations.yaml  datasets.yaml  layers.yaml  provenance_policy.yaml  scoring.yaml  sources.yaml  storage.yaml
data/: README.md
docs/: STRIPE_INTEGRATION.md  agentmemory.md  architecture.md  data_policy.md  layer_catalog.md  methodology.md  security_policy.md
frontend/: .vercelignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
scripts/: audit_site_selection_sources.py  build_atlas_core.py  build_cable_geometry_supplement.py  build_observatory.py  build_pmtiles.py  build_pmtiles_inputs.py  build_schematic_cable_geometries.py  build_site_selection_environmental_index.py  build_site_selection_infrastructure_index.py  build_site_selection_land_index.py  build_site_selection_telecom_index.py  build_web_map_data.py  check_atlas_core.py  check_db.py  check_frontend_data.py  check_pmtiles_outputs.py  check_registry.py  check_visual_regression.py  clean_cache.py  create_api_key.py  create_manifest.py  init_db.py  (+17 more)
(+169 files in other folders)
