[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "future-infrastructure-atlas"
version = "0.1.0"
description = "Safe repository skeleton for the FUTURE Infrastructure Atlas geospatial intelligence platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psycopg[binary]>=3.1",
  "PyYAML>=6.0",
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["atlas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
